--- a/exercise4-fix.yaml
+++ b/exercise4-fix.yaml
@@ -76,14 +76,12 @@
       delay: 10
       failed_when: exercise4vm is failed or exercise4vm.failed
 
-    - name: Wait for VM to be running
-      kubernetes.core.k8s_info:
-        api_version: kubevirt.io/v1
-        kind: VirtualMachineInstance
-        namespace: "namespace-{{ user }}"
-        name: "exercise4"
-      register: exercise4info
-      until: "exercise4info.resources | length > 0 and exercise4info.resources[0].status.phase == 'Running'"
-      retries: 60
-      delay: 10
-      failed_when: exercise4info.resources | length == 0
+    - name: Wait for exercise4
+      ansible.builtin.command:
+        cmd: virtctl ssh lab-user@exercise4
+      ignore_errors: true
+      no_log: true
+      register: testssh
+      until: testssh.rc == 0
+      retries: 20
+      delay: 5
