--- a/exercise10-break.yaml
+++ b/exercise10-break.yaml
@@ -62,29 +62,25 @@
       delay: 10
       failed_when: createvmb is failed or createvmb.failed
 
-    - name: Wait for VM A to be running
-      kubernetes.core.k8s_info:
-        api_version: kubevirt.io/v1
-        kind: VirtualMachineInstance
-        namespace: "namespace-{{ user }}"
-        name: "exercise10-a"
-      register: exercise10ainfo
-      until: " exercise10ainfo.resources | length > 0 and exercise10ainfo.resources[0].status.phase == 'Running'"
-      retries: 60
-      delay: 10
-      failed_when: exercise10ainfo.resources | length == 0
+    - name: Wait for exercise10-a
+      ansible.builtin.command:
+        cmd: virtctl ssh lab-user@exercise10-a
+      ignore_errors: true
+      no_log: true
+      register: testssha
+      until: testssha.rc == 0
+      retries: 20
+      delay: 5
 
-    - name: Wait for VM B to be running
-      kubernetes.core.k8s_info:
-        api_version: kubevirt.io/v1
-        kind: VirtualMachineInstance
-        namespace: "namespace-{{ user }}"
-        name: "exercise10-b"
-      register: exercise10binfo
-      until: " exercise10binfo.resources | length > 0 and exercise10binfo.resources[0].status.phase == 'Running'"
-      retries: 60
-      delay: 10
-      failed_when: exercise10binfo.resources | length == 0
+    - name: Wait for exercise10-b
+      ansible.builtin.command:
+        cmd: virtctl ssh lab-user@exercise10-b
+      ignore_errors: true
+      no_log: true
+      register: testsshb
+      until: testsshb.rc == 0
+      retries: 20
+      delay: 5
 
     # - name: Creating NAD 2
     #   kubernetes.core.k8s:
