--- a/exercise5-break.yaml
+++ b/exercise5-break.yaml
@@ -42,19 +42,7 @@
       delay: 10
       failed_when: exercise5vm is failed or exercise5vm.failed
 
-    # - name: Wait for VM to be running
-    #   kubernetes.core.k8s_info:
-    #     api_version: kubevirt.io/v1
-    #     kind: VirtualMachineInstance
-    #     namespace: "namespace-{{ user }}"
-    #     name: "exercise5"
-    #   register: exercise5info
-    #   until: "exercise5info.resources | length > 0 and exercise5info.resources[0].status.phase == 'Running'"
-    #   retries: 60
-    #   delay: 10
-    #   failed_when: exercise5info.resources | length == 0
-
-    - name: Wait for VM to be accessible over SSH
+    - name: Wait for exercise5
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise5
       ignore_errors: true
