--- a/exercise5-fix.yaml
+++ b/exercise5-fix.yaml
@@ -87,7 +87,7 @@
       delay: 10
       failed_when: exercise5vm is failed or exercise5vm.failed
 
-    - name: Wait for VM to be accessible over SSH
+    - name: Wait for exercise5
       ansible.builtin.command:
         cmd: virtctl ssh lab-user@exercise5
       ignore_errors: true
