--- a/exercise6-break.yaml
+++ b/exercise6-break.yaml
@@ -34,27 +34,27 @@
       delay: 10
       failed_when: secretidrsa is failed or secretidrsa.failed
 
-    - name: Check if VM exists and get details
-      kubernetes.core.k8s_info:
-        kind: VirtualMachine
-        api_version: kubevirt.io/v1
-        name: "{{ vm_name }}"
-        namespace: "{{ namespace }}"
-      register: vm_info
+    # - name: Check if VM exists and get details
+    #   kubernetes.core.k8s_info:
+    #     kind: VirtualMachine
+    #     api_version: kubevirt.io/v1
+    #     name: "{{ vm_name }}"
+    #     namespace: "{{ namespace }}"
+    #   register: vm_info
 
-    - name: If exists and running stop VirtualMachine 
-      when: vm_info.resources | length > 0 and vm_info.resources[0].spec.running == true
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          apiVersion: kubevirt.io/v1
-          kind: VirtualMachine
-          metadata:
-            name: "{{ vm_name }}"
-            namespace: "{{ namespace }}"
-          spec:
-            running: false
-      register: stop_vm
+    # - name: If exists and running stop VirtualMachine 
+    #   when: vm_info.resources | length > 0 and vm_info.resources[0].spec.running == true
+    #   kubernetes.core.k8s:
+    #     state: present
+    #     definition:
+    #       apiVersion: kubevirt.io/v1
+    #       kind: VirtualMachine
+    #       metadata:
+    #         name: "{{ vm_name }}"
+    #         namespace: "{{ namespace }}"
+    #       spec:
+    #         running: false
+    #   register: stop_vm
 
     # - name: Wait for VirtualMachine to stop
     #   when: stop_vm is defined
@@ -62,15 +62,15 @@
     #     timeout: 60
     #   delay: 10
 
-    - name: Wait for VirtualMachine to stop
-      kubernetes.core.k8s_info:
-        kind: VirtualMachineInstance
-        namespace: "namespace-{{ user }}"
-        name: "exercise6"
-      register: exercise6vm
-      retries: 60
-      delay: "10"
-      until: exercise6vm.resources | length == 0
+    # - name: Wait for VirtualMachine to stop
+    #   kubernetes.core.k8s_info:
+    #     kind: VirtualMachineInstance
+    #     namespace: "namespace-{{ user }}"
+    #     name: "exercise6"
+    #   register: exercise6vm
+    #   retries: 60
+    #   delay: "10"
+    #   until: exercise6vm.resources | length == 0
 
     - name: Breaking the exercise6
       kubernetes.core.k8s:
