--- a/exercise6-grade.yaml
+++ b/exercise6-grade.yaml
@@ -6,30 +6,6 @@
     user: "{{ lookup('env', 'USER') }}"
 
   tasks:
-
-    # - name: Get the VirtualMachineInstanceMigration resource
-    #   kubernetes.core.k8s_info:
-    #     kind: VirtualMachineInstanceMigration
-    #     api_version: kubevirt.io/v1
-    #     namespace: "{{ namespace }}"
-    #   register: vmi_migrations
-    #   ignore_errors: true
-
-    # - name: Get the VirtualMachineInstanceMigration for the Exercise6 VM
-    #   ansible.builtin.set_fact:
-    #     filtered_vmi_migrations: "{{ vmi_migrations.resources | selectattr('spec.vmiName', 'equalto', vm_name) | list }}"
-    #   ignore_errors: true
-
-    # - name: Order VirtualMachineInstanceMigration by startTimestamp (newst first)
-    #   ansible.builtin.set_fact:
-    #     sorted_vmi_migrations: "{{ filtered_vmi_migrations | sort(attribute='status.startTimestamp', reverse=true) }}"
-    #   ignore_errors: true
-
-    # - name: Get VirtualMachineInstanceMigration status
-    #   ansible.builtin.set_fact:
-    #     vmi_migration_status: "{{ filtered_vmi_migrations[0].status.phase }}"
-    #     fail_msg: "Ops, something went wrong and you have to fix the exercise!"
-
     - name: Get the exercise6 VM details from OpenShift Virtualization
       kubernetes.core.k8s_info:
         kind: VirtualMachine
@@ -41,13 +17,12 @@
     - name: Get the cloudinitdisk details
       ansible.builtin.set_fact:
         cloudinitdisk: " {{
-            vm_info.resources[0].spec.template.spec.domain.devices.disks[1]
-          }}"
+          vm_info.resources[0].spec.template.spec.domain.devices.disks[1]
+        }}"
 
     - name: Certify that the cloudinitdisk have no readonly attribute
       ansible.builtin.assert:
         that:
-          - "cloudinitdisk.readonly is not defined"
+          - "'readonly' not in cloudinitdisk"
         success_msg: "Good job, the development team are happy that you solved the problem!"
         fail_msg: "Ops, something went wrong and you have to fix the exercise!"
-
