--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -621,3 +621,34 @@
       when:
         - nmstate_cfg | default(false) | bool
       ignore_errors: true
+
+    - name: Create the ocs-storagecluster-ceph-rbd SC
+      kubernetes.core.k8s:
+        kind: StorageClass
+        definition:
+          allowVolumeExpansion: true
+          apiVersion: storage.k8s.io/v1
+          kind: StorageClass
+          metadata:
+            annotations:
+              description: Provides RWO Filesystem volumes, and RWO and RWX Block volumes
+            name: ocs-storagecluster-ceph-rbd
+          parameters:
+            clusterID: openshift-storage
+            csi.storage.k8s.io/controller-expand-secret-name: rook-csi-rbd-provisioner
+            csi.storage.k8s.io/controller-expand-secret-namespace: openshift-storage
+            csi.storage.k8s.io/fstype: ext4
+            csi.storage.k8s.io/node-stage-secret-name: rook-csi-rbd-node
+            csi.storage.k8s.io/node-stage-secret-namespace: openshift-storage
+            csi.storage.k8s.io/provisioner-secret-name: rook-csi-rbd-provisioner
+            csi.storage.k8s.io/provisioner-secret-namespace: openshift-storage
+            imageFeatures: layering,deep-flatten,exclusive-lock,object-map,fast-diff
+            imageFormat: "2"
+            pool: ocpv-tenants
+            volumeNamePrefix: ocp4-cluster-8wmwj-
+          provisioner: openshift-storage.rbd.csi.ceph.com
+          reclaimPolicy: Delete
+          volumeBindingMode: WaitForFirstConsumer
+      when:
+        - nmstate_cfg is not defined
+      ignore_errors: true
