--- a/exercise3-grade.yaml
+++ b/exercise3-grade.yaml
@@ -20,6 +20,7 @@
         return_content: true
       register: urlcontent
       no_log: true
+      ignore_errors: true
 
     - name: Assert that is in the response body expected
       ansible.builtin.assert:
