--- a/admin-configure-environment.yaml
+++ b/admin-configure-environment.yaml
@@ -19,6 +19,76 @@
     #     msg: "You are logged in but you are not 'admin' user. Please log in with user 'admin'"
     #   when: oc_whoami_result.stdout != "admin" or oc_whoami_result.stdout != "system:admin"
 
+    - name: Ensure openshift-nmstate exists
+      kubernetes.core.k8s:
+        state: present
+        definition:
+          apiVersion: v1
+          kind: Namespace
+          metadata:
+            name: openshift-nmstate
+      register: namespacenmstate
+      retries: 60
+      delay: 10
+      when:
+        - nmstate_cfg | default(false) | bool
+
+    - name: Create the nmstate operator group
+      kubernetes.core.k8s:
+        kind: OperatorGroup
+        definition:
+          apiVersion: operators.coreos.com/v1
+          kind: OperatorGroup
+          metadata:
+            annotations:
+              olm.providedAPIs: NMState.v1.nmstate.io
+            name: openshift-nmstate-flnnw
+            namespace: openshift-nmstate
+          spec:
+            targetNamespaces:
+              - openshift-nmstate
+            upgradeStrategy: Default
+      when:
+        - nmstate_cfg | default(false) | bool
+
+    - name: Create the nmstate subscription
+      kubernetes.core.k8s:
+        kind: Subscription
+        definition:
+          apiVersion: operators.coreos.com/v1alpha1
+          kind: Subscription
+          metadata:
+            labels:
+              operators.coreos.com/kubernetes-nmstate-operator.openshift-nmstate: ""
+            name: kubernetes-nmstate-operator
+            namespace: openshift-nmstate
+          spec:
+            channel: stable
+            installPlanApproval: Automatic
+            name: kubernetes-nmstate-operator
+            source: redhat-operators
+            sourceNamespace: openshift-marketplace
+      when:
+        - nmstate_cfg | default(false) | bool
+
+    # - name: Pause for 60 seconds to wait for pods
+    #   ansible.builtin.pause:
+    #     seconds: 60
+    #   when:
+    #     - nmstate_cfg | default(false) | bool
+
+    # - name: Wait for all pods to be running on openshift-nmstate
+    #   kubernetes.core.k8s_info:
+    #     api_version: v1
+    #     kind: Pod
+    #     namespace: "openshift-nmstate"
+    #   register: pod_list
+    #   until: pod_list.resources | selectattr('status.phase', 'eq', 'Running') | list | length == pod_list.resources | length
+    #   retries: 60
+    #   delay: 10
+    #   when:
+    #     - nmstate_cfg | default(false) | bool
+
     - name: Ensure users namespace exists
       kubernetes.core.k8s:
         state: present
@@ -336,76 +406,6 @@
       become: true
       become_method: ansible.builtin.sudo
       ignore_errors: true
-
-    - name: Ensure openshift-nmstate exists
-      kubernetes.core.k8s:
-        state: present
-        definition:
-          apiVersion: v1
-          kind: Namespace
-          metadata:
-            name: openshift-nmstate
-      register: namespacenmstate
-      retries: 60
-      delay: 10
-      when:
-        - nmstate_cfg | default(false) | bool
-
-    - name: Create the nmstate operator group
-      kubernetes.core.k8s:
-        kind: OperatorGroup
-        definition:
-          apiVersion: operators.coreos.com/v1
-          kind: OperatorGroup
-          metadata:
-            annotations:
-              olm.providedAPIs: NMState.v1.nmstate.io
-            name: openshift-nmstate-flnnw
-            namespace: openshift-nmstate
-          spec:
-            targetNamespaces:
-              - openshift-nmstate
-            upgradeStrategy: Default
-      when:
-        - nmstate_cfg | default(false) | bool
-
-    - name: Create the nmstate subscription
-      kubernetes.core.k8s:
-        kind: Subscription
-        definition:
-          apiVersion: operators.coreos.com/v1alpha1
-          kind: Subscription
-          metadata:
-            labels:
-              operators.coreos.com/kubernetes-nmstate-operator.openshift-nmstate: ""
-            name: kubernetes-nmstate-operator
-            namespace: openshift-nmstate
-          spec:
-            channel: stable
-            installPlanApproval: Automatic
-            name: kubernetes-nmstate-operator
-            source: redhat-operators
-            sourceNamespace: openshift-marketplace
-      when:
-        - nmstate_cfg | default(false) | bool
-
-    - name: Pause for 60 seconds to wait for pods
-      ansible.builtin.pause:
-        seconds: 60
-      when:
-        - nmstate_cfg | default(false) | bool
-
-    - name: Wait for all pods to be running on openshift-nmstate
-      kubernetes.core.k8s_info:
-        api_version: v1
-        kind: Pod
-        namespace: "openshift-nmstate"
-      register: pod_list
-      until: pod_list.resources | selectattr('status.phase', 'eq', 'Running') | list | length == pod_list.resources | length
-      retries: 60
-      delay: 10
-      when:
-        - nmstate_cfg | default(false) | bool
 
     # - name: Remove argocd CRD on openshift-gitops
     #   kubernetes.core.k8s:
