do not remove ssh key

--- a/exercise11-fix.yaml
+++ b/exercise11-fix.yaml
@@ -61,15 +61,15 @@
       delay: 10
       failed_when: deletenad is failed or deletenad.failed
 
-    - name: Removing the idrsa secret
-      kubernetes.core.k8s:
-        state: absent
-        template: "exercise11-secret.yaml.j2"
-      register: secretidrsa
-      until: secretidrsa is succeeded
-      retries: 60
-      delay: 10
-      failed_when: secretidrsa is failed or secretidrsa.failed
+    # - name: Removing the idrsa secret
+    #   kubernetes.core.k8s:
+    #     state: absent
+    #     template: "exercise11-secret.yaml.j2"
+    #   register: secretidrsa
+    #   until: secretidrsa is succeeded
+    #   retries: 60
+    #   delay: 10
+    #   failed_when: secretidrsa is failed or secretidrsa.failed
 
     - name: Creating NAD
       kubernetes.core.k8s:
