--- a/exercise10-clean.yaml
+++ b/exercise10-clean.yaml
@@ -71,17 +71,17 @@
       with_items: "{{ nad_list.resources }}"
       when: nad_list.resources | length > 0
 
-    - name: Get user SSH key
-      ansible.builtin.slurp:
-        src: "/home/{{ user }}/.ssh/id_rsa.pub"
-      register: usersshkey
+    # - name: Get user SSH key
+    #   ansible.builtin.slurp:
+    #     src: "/home/{{ user }}/.ssh/id_rsa.pub"
+    #   register: usersshkey
 
-    - name: Removing the idrsa secret
-      kubernetes.core.k8s:
-        state: absent
-        template: "exercise10-secret.yaml.j2"
-      register: secretidrsa
-      until: secretidrsa is succeeded
-      retries: 60
-      delay: 10
-      failed_when: secretidrsa is failed or secretidrsa.failed
+    # - name: Removing the idrsa secret
+    #   kubernetes.core.k8s:
+    #     state: absent
+    #     template: "exercise10-secret.yaml.j2"
+    #   register: secretidrsa
+    #   until: secretidrsa is succeeded
+    #   retries: 60
+    #   delay: 10
+    #   failed_when: secretidrsa is failed or secretidrsa.failed
