--- a/exercise10-fix.yaml
+++ b/exercise10-fix.yaml
@@ -56,20 +56,20 @@
       delay: 10
       failed_when: deletenad is failed or deletenad.failed
 
-    - name: Get user SSH key
-      ansible.builtin.slurp:
-        src: "/home/{{ user }}/.ssh/id_rsa.pub"
-      register: usersshkey
+    # - name: Get user SSH key
+    #   ansible.builtin.slurp:
+    #     src: "/home/{{ user }}/.ssh/id_rsa.pub"
+    #   register: usersshkey
 
-    - name: Removing the idrsa secret
-      kubernetes.core.k8s:
-        state: absent
-        template: "exercise10-secret.yaml.j2"
-      register: secretidrsa
-      until: secretidrsa is succeeded
-      retries: 60
-      delay: 10
-      failed_when: secretidrsa is failed or secretidrsa.failed
+    # - name: Removing the idrsa secret
+    #   kubernetes.core.k8s:
+    #     state: absent
+    #     template: "exercise10-secret.yaml.j2"
+    #   register: secretidrsa
+    #   until: secretidrsa is succeeded
+    #   retries: 60
+    #   delay: 10
+    #   failed_when: secretidrsa is failed or secretidrsa.failed
 
     - name: Create SSH config file with StrictHostKeyChecking no
       ansible.builtin.copy:
