changed exercises grade messages

--- a/exercise3-grade.yaml
+++ b/exercise3-grade.yaml
@@ -33,6 +33,6 @@
       when: urlcontent_valid
 
     - name: Show failure message if condition is false
-      ansible.builtin.debug:
+      ansible.builtin.fail:
         msg: "Ops, something went wrong and you have to fix the exercise!"
       when: not urlcontent_valid
