--- a/exercise1-grade.yaml
+++ b/exercise1-grade.yaml
@@ -19,6 +19,6 @@
       when: exercise1_info.resources[0].status.printableStatus == "Running"
 
     - name: Check if VM is not running
-      ansible.builtin.debug:
+      ansible.builtin.fail:
         msg: "The Virtual Machine is NOT running."
       when: exercise1_info.resources[0].status.printableStatus != "Running"
