changed message on ex grade

--- a/exercise6-grade.yaml
+++ b/exercise6-grade.yaml
@@ -20,9 +20,17 @@
           vm_info.resources[0].spec.template.spec.domain.devices.disks[1]
         }}"
 
-    - name: Certify that the cloudinitdisk have no readonly attribute
-      ansible.builtin.assert:
-        that:
-          - "'readonly' not in cloudinitdisk"
-        success_msg: "Yeah Yeah Yeah, the virtual machine can be migrate to another node now!"
-        fail_msg: "Ops, something went wrong and you have to fix the exercise!"
+    - name: Check if cloudinitdisk has no 'readonly' attribute
+      ansible.builtin.set_fact:
+        cloudinitdisk_valid: >-
+          {{ 'readonly' not in cloudinitdisk }}
+
+    - name: Show success message if 'readonly' is not present
+      ansible.builtin.debug:
+        msg: "Yeah Yeah Yeah, the virtual machine can be migrated to another node now!"
+      when: cloudinitdisk_valid
+
+    - name: Show failure message if 'readonly' is present
+      ansible.builtin.debug:
+        msg: "Ops, something went wrong and you have to fix the exercise!"
+      when: not cloudinitdisk_valid
