--- a/exercise6-break.yaml
+++ b/exercise6-break.yaml
@@ -88,7 +88,9 @@
       ignore_errors: true
       no_log: true
       register: testssh
-      until: testssh.rc == 0
+      until:
+        - testssh.rc == 0
+        - "'lab-user@vmi' not in testssh.stdout"
       retries: 20
       delay: 5
 
